2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-ui-utils.c:
	* libempathy-gtk/gossip-ui-utils.h:
	* configure.ac: Use gnome_vfs_url_show() instead of gnome_url_show()
	to avoid libgnomeui dependency (Ross Burton).

2007-06-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chatrooms-window.c:
	* libempathy-gtk/gossip-chat-window.c:
	* libempathy/gossip-chatroom.c:
	* libempathy/gossip-chatroom-manager.c:
	* configure.ac: Monitor changes on chatrooms.xml file and relead it 
	when it's modified. connect chatroom-added/removed in some places where
	needed.

2007-06-01  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.7

2007-05-31  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-new-chatroom-dialog.c: No need to RequestHandle,
	MissionControl has API to request the channel from handle string.

	* libempathy-gtk/empathy-main-window.c: Request room channel when
	clicking on favorite rooms.

	* TODO: Add a task: supporting registering.

2007-05-31  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-idle.c: Do not restore away presence message when
	coming back after the user set manually to away.

2007-05-31  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-account-chooser.c: Fix warning when selecting
	all accounts.

	* src/empathy-accounts-main.c:
	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/gossip-accounts-dialog.h:
	* libempathy-gtk/gossip-accounts-dialog.c:
	* libempathy-gtk/gossip-preferences.h:
	* libempathy-gtk/gossip-preferences.c: Set parent window.

	* libempathy-gtk/empathy-main-window.c: Implement favorite chatroom
	menu and fix a leak.

	* libempathy-gtk/Makefile.am:
	* libempathy/Makefile.am:
	* libempathy/gossip-chatroom.c:
	* libempathy/gossip-chatroom.h:
	* libempathy/gossip-chatroom-manager.c:
	* libempathy/gossip-chatroom-manager.h:
	* libempathy/gossip-chatroom-manager.dtd:
	* libempathy-gtk/gossip-chatrooms-window.glade: