@@ -1,5 +1,12 @@
 2007-06-02  Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy-gtk/gossip-group-chat.c:
+	* libempathy/empathy-tp-contact-list.c:
+	* libempathy/gossip-contact.c: Set default presence to available if
+	there is no presence iface.
+
+2007-06-02  Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/gossip-ui-utils.c:
 	* libempathy-gtk/gossip-ui-utils.h:
 	* configure.ac: Use gnome_vfs_url_show() instead of gnome_url_show()
